# CMIP6-vs-CMIP7-GHG-Concentrations

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/processed/adam-et-al-2024/: hfc23_projections.csv
data/processed/droste-et-al-2020/: pfcs_data.csv
data/processed/velders-et-al-2022/: hfc_projections.csv
data/processed/western-et-al-2024/: hcfc_projections.csv
data/raw/adam-et-al-2024/: HFC-23_Global_annual_mole_fraction.csv
notebooks/: 0001_clean-cmip6-data.py  0001_download-cmip6-data.py  0001_download-esgf-data.py  0002_clean-cmip7-data.py  000_ensure-esgpull-is-setup.py  001_grab-cmip6-data.py  0100_plot-compare-cmip6-cmip7-global-annual-means.py  0101_demonstrate-cmip6-eq-issue.py  0102_plot-erfs.py  010_grab-cmip7-data.py  020_grab-western-et-al-2024-data.py  030_grab-velders-et-al-2022-data.py  040_grab-droste-et-al-2020-data.py  050_grab-adam-et-al-2024-data.py  100_compare-global-annual-means.py  utils.py
src/local/: __init__.py  erf.py  esgf_data_helper.py  intake_esgf_helper.py  paths.py  time.py  timeseries_db.py
src/local/data_reading/: __init__.py  cmip6.py
