[tool.poetry]
package-mode = false
name = "prototype"
version = "0.1.0"
description = "Comparison of greenhouse gas concentrations used in CMIP6 vs. CMIP7"
authors = ["Zebedee Nicholls <zebedee.nicholls@climate-resource.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pre-commit = ">=3.3.1"
notebook = ">=7.0.6"
jupytext = ">=1.15.2"
esgpull = "0.7.3"
xarray = "^2024.7.0"
input4mips-validation = "0.11.3"
nc-time-axis = "^1.4.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
openscm-units = "^0.6.3"

[tool.jupytext]
formats = "ipynb,py:percent"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
